--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,9 @@
-body {
+.App1 {
   display: flex;
   justify-content: center; 
   align-items: center; 
   
 }
-
-input {
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    width: 100%;
-    font-size: 16px;
-}
-
-label {
-    margin-bottom: 5px;
-    display: block;
-}
-
-
 
 .App {
   font-family: sans-serif;
